docs: Documentando recurso de Position com Swagger
