# app/Models/Position.php
@@ -5,6 +5,16 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @OA\Schema(
+ *      schema="Position",
+ *      required={"id", "name"},
+ *      @OA\Property(property="id", type="string", example="4058", maxLength=20),
+ *      @OA\Property(property="name", type="string", example="Analista de sistemas III", maxLength=80),
+ *      @OA\Property(property="created_at", type="string", format="date-time", example="2024-01-30T03:00:00.000000Z"),
+ *      @OA\Property(property="updated_at", type="string", format="date-time", example="2024-01-30T03:00:00.000000Z")
+ * )
+ */
 class Position extends Model
 {
     use HasFactory;
